crates/uitest/fixtures/ty/def/inherent_impl_missing_bound.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/inherent_impl_missing_bound.fe
---
error[6-0003]: trait bound is not satisfied
  ┌─ inherent_impl_missing_bound.fe:9:9
  │
9 │ impl<T> Cache<T> {
  │         ^^^^^^^^ `_` doesn't implement `Hashable`

error[6-0003]: trait bound is not satisfied
   ┌─ inherent_impl_missing_bound.fe:10:14
   │
10 │     fn touch(self) {}
   │              ^^^^ `_` doesn't implement `Hashable`
